News module changelog

2013
=============================
1. Update version to 1.0.0-beta.3
2. Fix translation
3. Update Text API for use PI methods
4. Improve templates
5. Remove social bookmark option
6. Add Json Controller for make output for mobile apps
7. Add SlugDuplicate Validator
8. Change alias to slug