@@ -231,6 +231,10 @@ class StoryController extends ActionController
         if ($this->request->isPost()) {
             $data = $this->request->getPost();
             $file = $this->request->getFiles();
+            // Set slug
+            $slug = ($data['slug']) ? $data['slug'] : $data['title'];
+            $data['slug'] = Pi::service('api')->news(array('Text', 'slug'), $slug);
+            // Form filter
             $form->setInputFilter(new StoryFilter($options['field']));
             $form->setData($data);
             if ($form->isValid()) {
@@ -297,9 +301,6 @@ class StoryController extends ActionController
                 // Set description
                 $description = ($values['description']) ? $values['description'] : $values['title'];
                 $values['description'] = Pi::service('api')->news(array('Text', 'description'), $description);
-                // Set slug
-                $slug = ($values['slug']) ? $values['slug'] : $values['title'];
-                $values['slug'] = Pi::service('api')->news(array('Text', 'slug'), $slug, $values['id'], $this->getModel('story'));
                 // Save values
                 if (!empty($values['id'])) {
                     $row = $this->getModel('story')->find($values['id']);
