@@ -48,12 +48,18 @@ class TopicFilter extends InputFilter
         ));
         // slug
         $this->add(array(
-            'name' => 'slug',
-            'required' => false,
-            'filters' => array(
+            'name'          => 'slug',
+            'required'      => false,
+            'filters'       => array(
                 array(
-                    'name' => 'StringTrim',
+                    'name'  => 'StringTrim',
                 ),
+            ),
+            'validators'    => array(
+                new \Module\News\Validator\SlugDuplicate(array(
+                    'module'            => Pi::service('module')->current(),
+                    'table'             => 'topic',
+                )),
             ),
         ));
         // body
