@@ -10,3 +10,4 @@ News module changelog
 6. Add Json Controller for make output for mobile apps
 7. Add SlugDuplicate Validator
 8. Change alias to slug
+9. Use SlugDuplicate Validator
